syntax = "proto3";

package user;

option go_package = "./userpb";

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string password = 5;
}

message CreateUserRequest {
  User user = 1;
}
message CreateUserResponse {
  User user = 1;
}

message ReadUserRequest {
  string user_id = 1;
}
message ReadUserResponse {
  User user = 1;
}
message UpdateUserRequest {
  User user = 1;
}
message UpdateUserResponse {
  User user = 1;
}
message DeleteUserRequest {
  string user_id = 1;
}
message DeleteUserResponse {
  string user_id = 1;
}
service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc ReadUser(ReadUserRequest) returns (ReadUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}